examples/test/testpolicy13015.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13015
  namespace: namespace8
spec:
  podSelector:
    matchLabels:
      key33: value27
      key31: value25
      key36: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value3
          key49: value8
          key35: value23
      podSelector:
        matchLabels:
          key24: value3
          key5: value49
          key16: value20
